--- a/android/build.gradle
+++ b/android/build.gradle
@@ -61,6 +61,7 @@ android {
 
         api 'com.google.firebase:firebase-messaging:23.2.0'
         implementation 'io.carrotquest:android-sdk:1.0.80-commonRelease'
+        implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
     }
 
     testOptions {
